# kew

./: .gitignore  .mcp.json  ANALYSIS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  kew_config.yaml  skills-lock.json
.claude/: kew-statusline.sh
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: kew.rb
src/: config.rs  main.rs
src/agents/: mod.rs
src/agents/builtin/: debugger.yaml  developer.yaml  doc-audit.yaml  docs-writer.yaml  error-finder.yaml  security.yaml  tester.yaml  watcher.yaml
src/cli/: agent.rs  chain.rs  context.rs  doctor.rs  index.rs  init.rs  mcp.rs  mod.rs  run.rs  status.rs
src/db/: context.rs  locks.rs  mod.rs  models.rs  schema.rs  task_logs.rs  tasks.rs  vectors.rs
src/llm/: claude.rs  mod.rs  ollama.rs  router.rs
src/mcp/: mod.rs  server.rs
src/tui/: dashboard.rs  mod.rs
src/worker/: chain.rs  mod.rs  pool.rs  tools.rs  worker.rs
