[package]
name = "kew"
version = "1.0.2"
edition = "2021"
description = "Real local agent orchestration"
license = "MIT"

[[bin]]
name = "kew"
path = "src/main.rs"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
atty = "0.2"

# HTTP
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# IDs
ulid = "1"

# Home directory lookup (for ~/.config/kew/agents/)
dirs = "5"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex (for agent grep tool)
regex = "1"

# Secret handling (zeroize API keys on drop)
secrecy = { version = "0.10", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI & terminal
indicatif = "0.17"
console = "0.15"

# TUI dashboard
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# MCP server
rmcp = { version = "1", features = [
    "server",
    "transport-io",
    "macros",
], optional = true }
schemars = { version = "0.8", optional = true }

# Vector search
zerocopy = { version = "0.8", optional = true }

# File indexing
notify = { version = "6", optional = true }
ignore = { version = "0.4", optional = true }

[features]
default = ["tui", "mcp", "vectors", "index"]
tui = ["dep:ratatui", "dep:crossterm"]
mcp = ["dep:rmcp", "dep:schemars"]
vectors = ["dep:zerocopy"]
index = ["dep:notify", "dep:ignore"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
